--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@serwist/next": "^9.1.1",
     "@serwist/precaching": "^9.1.1",
     "next": "15.4.5",
+    "next-intl": "^4.3.12",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
